--- a/storefront/src/App.css
+++ b/storefront/src/App.css
@@ -129,3 +129,9 @@ a {
 .image-card>header {
   font-size: 2em;
 }
+
+.body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
